# kmsxx

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  Android.bp  CMakeLists.txt  LICENSE  LTO.cmake  README.md  TODO  meson.build  meson_options.txt  notes.txt  pyproject.toml
.github/workflows/: c-cpp.yml  wheels.yml
db/: CMakeLists.txt  db.cpp
include/linux/: media-bus-format.h  v4l2-subdev.h
kms++/: Android.mk  CMakeLists.txt  atomicreq.cpp  card.cpp  connector.cpp  crtc.cpp  crtc.h  decls.h  encoder.h  extframebuffer.cpp  kms++.pc.in  meson.build  modedb.h  modedb_cea.cpp  modedb_dmt.cpp  pipeline.h  plane.cpp  property.cpp  videomode.cpp  videomode.h
kms++/inc/kms++/: atomicreq.h  blob.h  card.h  connector.h  crtc.h  decls.h  dmabufframebuffer.h  drmobject.h  drmpropobject.h  dumbframebuffer.h  encoder.h  extframebuffer.h  framebuffer.h  kms++.h  mappedframebuffer.h  mode_cvt.h  modedb.h  pagefliphandler.h  pipeline.h  pixelformats.h  plane.h  property.h  videomode.h
kms++/inc/kms++/ion/: ionbuffer.h  ionkms++.h
kms++/inc/kms++/omap/: omapcard.h  omapframebuffer.h  omapkms++.h
kms++/inc/linux/: ti-pat.h
kms++/src/: atomicreq.cpp  blob.cpp  card.cpp  connector.cpp  crtc.cpp  dmabufframebuffer.cpp  drmobject.cpp  drmpropobject.cpp  dumbframebuffer.cpp  encoder.cpp  extframebuffer.cpp  framebuffer.cpp  helpers.cpp  helpers.h  mappedframebuffer.cpp  mode_cvt.cpp  modedb.cpp  modedb_cea.cpp  modedb_dmt.cpp  pixelformats.cpp  plane.cpp  property.cpp  videomode.cpp
kms++/src/ion/: ion.cpp  ionbuffer.cpp
kms++/src/omap/: omapcard.cpp  omapframebuffer.cpp
kms++gl/: CMakeLists.txt
kms++gl/inc/kms++gl/: ion.h  kms-egl.h  kms-gbm.h  ti-pat.h
kms++gl/src/: ion.cpp  kms-egl.cpp  kms-gbm.cpp  ti-pat.cpp
kms++util/: Android.mk  CMakeLists.txt  color.cpp  colorbar.cpp  cpuframebuffer.h  drawing.cpp  extcpuframebuffer.cpp  extcpuframebuffer.h  kms++util.h  kms++util.pc.in  meson.build  opts.h  testpat.cpp
kms++util/inc/kms++util/: color.h  color16.h  cpuframebuffer.h  endian.h  extcpuframebuffer.h  kms++util.h  mediabus.h  mediadevice.h  opts.h  resourcemanager.h  stopwatch.h  strhelpers.h  videodevice.h  videosubdev.h
kms++util/src/: color.cpp  colorbar.cpp  conv-common.h  conv-gray.h  conv-raw-packed.h  conv-raw.h  conv-rgb.h  conv-yuv-packed.h  conv-yuv-planar-packed.h  conv-yuv-planar.h  conv-yuv-semiplanar.h  conv-yuv.h  conv.h  cpuframebuffer.cpp  drawing.cpp  extcpuframebuffer.cpp  font_8x8.h  helpers.cpp  mediabus.cpp  mediadevice.cpp  opts.cpp  resourcemanager.cpp  strhelpers.cpp  testpat.cpp  videodevice.cpp  videosubdev.cpp
kmscube/: CMakeLists.txt  chain.cpp  cube-egl.cpp  cube-egl.h  cube-gbm.cpp  cube-gles2.cpp  cube-gles2.h  cube-null.cpp  cube-wl.cpp  cube-x11.cpp  cube.cpp  cube.h  dri3test.c  esTransform.c  esTransform.cpp  esTransform.h  esUtil.h  kmscube.cpp  meson.build
libkms++/: CMakeLists.txt  atomicreq.cpp  atomicreq.h  blob.cpp  blob.h  card.cpp  card.h  connector.cpp  connector.h  crtc.cpp  crtc.h  decls.h  drmobject.cpp  drmobject.h  drmpropobject.cpp  drmpropobject.h  dumbframebuffer.cpp  dumbframebuffer.h  encoder.cpp  encoder.h  extframebuffer.cpp  extframebuffer.h  framebuffer.cpp  framebuffer.h  helpers.cpp  helpers.h  kms++.h  modedb.cpp  omapcard.cpp  omapcard.h  omapframebuffer.cpp  omapframebuffer.h  pagefliphandler.h  pixelformats.cpp  pixelformats.h  plane.cpp  plane.h  property.cpp  property.h  videomode.h
libkms++/utils/: color.cpp  conv.h  testpat.cpp
libkms++util/: CMakeLists.txt  color.h  drawing.cpp  extcpuframebuffer.cpp  font_8x8.h  helpers.cpp  kms++util.h  opts.cpp  stopwatch.h  strhelpers.cpp  testpat.cpp
libkmstest/: CMakeLists.txt  color.cpp  color.h  colorbar.cpp  colorbar.h  conv.cpp  conv.h  cpuframebuffer.cpp  extcpuframebuffer.h  kmstest.h  mappedbuffer.cpp  mappedbuffer.h  test.h  testpat.cpp  testpat.h
lua/: CMakeLists.txt  luakms.i  test.lua
py/: CMakeLists.txt  alpha-test.py  db.py  functest.py  gamma.py  helpers.py  iact.py  meson.build  pykms.cpp  pykms.i  pykmsbase.cpp  pykmsomap.cpp  pykmstest.cpp  pykmsutil.cpp  run.sh  test.py  trans-test.py
py/pykms/: CMakeLists.txt  __init__.py  meson.build  pykms.cpp  pykmsbase.cpp  pykmsion.cpp  pykmsomap.cpp  pykmsutil.cpp  pyvid.cpp
py/pyv4l2/: __init__.py  meson.build  pyv4l2.cpp
py/tests/: CMakeLists.txt  alpha-test.py  big_fb.py  cam-mplex-configs.py  cam-mplex.py  cam.py  ctm_csc.py  ctm_test.py  db.py  functest.py  gamma.py  global_alpha_test.py  hires.py  hpd.py  iact.py  kmsmodeview.py  mc-print.py  modeset_event.py  pic.py  plane_csc.py  plane_hog.py  plane_move.py  rottest.py  scale.py  sync.py  test.py  test_helpers.py  testmodes.py  trans-test.py  v4l2-try-test.py  wb-m2m-crop.py
py/tests/sunxi-bug-1/: README.md  sunxi-bugs.py
scripts/: clang-format-all.sh  dmt.py
subprojects/: pybind11.wrap
testpat/: CMakeLists.txt  testpat.cpp
tests/: CMakeLists.txt  cmdoptions.h  consumer.cpp  db.cpp  fbtestpat.cpp  kmscapture.cpp  kmsprint.cpp  kmsview.cpp  omapwb.h  optiontester.cpp  prodcons.cpp  prodcons.h  producer.cpp  test.h  testpat.cpp  wb.cpp
utils/: Android.mk  CMakeLists.txt  buftest.cpp  db.cpp  fbtest.cpp  fbtestpat.cpp  kmsblank.cpp  kmscapture.cpp  kmsprint.cpp  kmstest.cpp  kmstouch.cpp  kmsview.cpp  meson.build  omap-wbcap.cpp  omap-wbm2m.cpp  testpat.cpp  wbcap.cpp  wbm2m.cpp
v4l2++/: meson.build
v4l2++/inc/v4l2++/: helpers.h  mediabus.h  mediadevice.h  pixelformats.h  videodevice.h  videosubdev.h
v4l2++/src/: helpers.cpp  mediabus.cpp  mediadevice.cpp  pixelformats.cpp  videodevice.cpp  videosubdev.cpp
