option('omap', type : 'feature', value : 'auto',
       description : 'Build omapdrm extensions')

option('static-libc', type : 'boolean', value : false,
       description : 'Build with -static-libgcc -static-libstdc++')

option('utils', type : 'boolean', value : true,
       description : 'Build kms++utils library and an assortment of utils and tests')

option('pykms', type : 'feature', value : 'auto',
       description : 'Build python bindings')

option('system-pybind11', type : 'feature', value : 'auto',
       description : 'Use pybind11 from the system or from meson subproject')

option('kmscube', type : 'boolean', value : false,
       description : 'Build kmscube test application')
